.ops/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecosia-gvko-deployment
  creationTimestamp: null
  labels:
    app: ecosia-gvko-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ecosia-gvko-api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ecosia-gvko-api
        env: ENV_PLACEHOLDER
    spec:
      containers:
        - name: ecosia-gvko-api
          image: IMAGE_PLACEHOLDER
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
              httpHeaders:
                - name: Kubernetes-Probe
                  value: Liveness
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
              httpHeaders:
                - name: Kubernetes-Probe
                  value: Readiness
            initialDelaySeconds: 5
            periodSeconds: 5
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
status: {}
