.ops/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ecosia-gvko-service
  labels:
    app: ecosia-gvko-api
    env: dev
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 3000
  selector:
    app: ecosia-gvko-api
    env: dev
  type: "NodePort"
