.ops/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ecosia-gvko-ingress
  labels:
    app: ecosia-gvko-api
spec:
  rules:
    - host: "local.ecosia.org"
      http:
        paths:
          - backend:
              serviceName: ecosia-gvko-service
              servicePort: 80
